--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 __pycache__
 /data/quora/
+/data/scan/scan_new_splits/
+/data/scan/scan_new_splits.zip
+/data/scan/length_split.zip
 /models/
 /outputs/
 /tensorboard/
